Misc NMS cleanup